Closed Bug 1651661 Opened 5 years ago Closed 4 years ago

`HttpChannelChild::Redirect3Complete` doesn't call the channel listener on failure

Categories

(Core :: Networking: HTTP, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox80 --- fixed

People

(Reporter: mayhemer, Assigned: mayhemer)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [necko-triaged])

Crash Data

Attachments

(1 file)

Calling CleanupRedirectingChannel(rv) releases the listener, but doesn't make sure OnStartRequest/OnStopRequest is called on it.

This has been introduced in bug 1294719.

Severity: -- → S3
Priority: -- → P1
Whiteboard: [necko-triaged]
Crash Signature: [@ mozilla::css::StreamLoader::~StreamLoader]
Assignee: nobody → honzab.moz
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
See Also: → 1294719

(In reply to Asif Youssuff from comment #3)

Seeing this crash whenever I try to load https://www.shopgoodwill.com/

Can you please check one of the build in this try run and check? Thanks.

Flags: needinfo?(yoasif)

Honza, your try build works for me.

Flags: needinfo?(yoasif)
Pushed by honzab.moz@firemni.cz: https://hg.mozilla.org/integration/autoland/rev/5738fd341989 Make sure we fullfil the stream listnener contract when we cannot forward an otherwise successfull HTTP redirect, r=JuniorHsu,necko-reviewers
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: