Bug 1651661 - Make sure we fullfil the stream listnener contract when we cannot forward an otherwise successfull HTTP redirect, r=JuniorHsu,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D83641